--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/slyle.css">
     <title>May-L</title>
 </head>
 <body>
     <main id="may-l">
         <h2>May-L</h2>
-        {{mailList}}
-        <ul>
-            <li>
-
-            </li>
+        <ul id="mylist" :class="'mailList.length === 10' ? 'show':''">
         </ul>
     </main>    
 
